--- a/style_contactme.css
+++ b/style_contactme.css
@@ -31,7 +31,7 @@ input[type=submit]:hover {
   background-color: grey;
 }
 
-.container {
+/*.container {
   border-radius: 5px;
   background-color: none;
   padding: 20px;
@@ -40,7 +40,7 @@ input[type=submit]:hover {
   right: 5%;
   bottom: 5%;
   font-family: 'Raleway', sans-serif;
-  /*text-transform: uppercase;*/
+  /*text-transform: uppercase;
   font-size: 15px;
 }
 
